--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "cookies": "^0.8.0",
+    "cookies-next": "^2.1.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.0",
     "next": "13.4.10",
-    "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "tw-elements": "^1.0.0-beta2",
+    "tw-elements-react": "^1.0.0-alpha1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/cookies": "^0.7.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26"
   }
 }
